# cpp-containers-python

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  development.md  pyproject.toml  requirements-build.txt  setup.py  test_cppcontainers.py  tox.ini
.github/workflows/: pythonpackage.yml
cppcontainers/: __init__.py  cppcontainers.pyx  smartptr.pxd
include/: smartptr.h
tests/: test_cppcontainers.py
