[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "cython==3.0.12",
  "setuptools>=61",
]

[project]
name = "cpp-containers"
version = "0.1"
description = "Python wrapper for CPP stdlib containers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Dobatymo" } ]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
urls.Home = "https://github.com/Dobatymo/cpp-containers-python"

[dependency-groups]
dev = [
  "genutility>=0.0.120",
  "pytest>=8.3.5",
]

[tool.setuptools]
packages = [ "cppcontainers" ]

[tool.ruff]
line-length = 120
lint.extend-select = [
  "B",
  "C4",
  "DTZ",
  "I",
  "PIE",
  "S",
  "UP",
]
lint.ignore = [ "S101" ]

[tool.mypy]
warn_unused_ignores = true
allow_redefinition = true
warn_unused_configs = true

[tool.cython-lint]
max-line-length = 120
ignore = [ "W191" ]
